@@ -56,7 +56,7 @@ use Brinance;
 #		v - version
 #			$ brinance -v
 
-my $VERSION = "3.00";
+my $VERSION = "3.01";
 my @arglist;
 
 # We first pull apart all arguments and push them or their equivalent into @arglist
@@ -102,7 +102,7 @@ foreach ( @ARGV )
 	elsif ( /^-/ ) # regular group of options
 	{
 		my @revlist = (); # reversed list
-		my @tmplist = (); # reversed reveresed list
+		my @tmplist = (); # reversed reversed list
 		my @donelist = (); # and now with the numbers all bunched together
 		my $work = "";
 		# This pulls it apart in reverse order
@@ -112,12 +112,14 @@ foreach ( @ARGV )
 			push ( @revlist, $work );
 		}
 
+		# This puts it back in forward order
 		my $j = 0;
 		for ( my $i = (@revlist-1); $i >= 0; $i-- )
 		{
 			$tmplist[$j++] = $revlist[$i];
 		}
 
+		# This groups the arguments logically.. digits bunched and others seperated
 		my $num = "";
 		foreach (@tmplist)
 		{
@@ -152,8 +154,7 @@ foreach ( @ARGV )
 	}
 }
 
-$Brinance::current_acct = 0;
-&Brinance::switch_acct (); # sets us up to use account0
+&Brinance::switch_acct (0); # sets us up to use account0
 &Brinance::update_future (); # sync with future transactions in account0
 
 # helper vars for processing args
@@ -172,14 +173,13 @@ foreach ( @arglist )
 	if ( $skipnext ) { $skipnext--; $where++; next; }
 
 	if (/^(\d+)$/) {
-		$Brinance::current_acct = $1;
-		my $out = &Brinance::switch_acct ();
+		my $out = &Brinance::switch_acct ($1);
 
 		if ( 1 == $out ) {
-			print "Now working with account$Brinance::current_acct\n";
+			print "Created account0 (this shouldn't happen here..)\n";
 		}
 		elsif ( 0 == $out ) {
-			print "Created account0 (this shouldn't happen here..)\n";
+			print "Now working with account$Brinance::current_acct\n";
 		}
 		elsif ( -1 == $out ) {
 			print "ERROR: account$Brinance::current_acct doesn't exist.\nUse -r or --create\n";
@@ -235,13 +235,13 @@ foreach ( @arglist )
 				&usage (1);
 			}
 
-			if ( "x" eq $out ) {
-				print "ERROR: invalid argument to Brinance::futurebalance()\n";
-				&usage (1);
-			}
-			else {
+			if ( $out ) {
 				# success
 				print "account" . $Brinance::current_acct . " future balance: " . sprintf ("%.2f", $out) . "\n";
+			}
+			else {
+				print "ERROR: invalid argument to Brinance::futurebalance()\n";
+				&usage (1);
 			}
 		}
 		else {
@@ -267,14 +267,14 @@ foreach ( @arglist )
 
 			if ( 1 == $out )
 			{
-				# success
-				print "account$arglist[$where+2] created successfully\n";
-			}
-			elsif ( 0 == $out )
-			{
 				# already exists
 				print "account$arglist[$where+2] already exists\n";
 				exit (0);
+			}
+			elsif ( 0 == $out )
+			{
+				# success
+				print "account$arglist[$where+2] created successfully\n";
 			}
 			elsif ( -1 == $out )
 			{
@@ -284,7 +284,7 @@ foreach ( @arglist )
 			{
 				print "ERROR: undefined output from Brinance::getName(); Check your account files..\n";
 				print "Exitting..\n";
-				exit (0);
+				exit (1);
 			}
 
 			$skipnext = 2;
@@ -400,7 +400,7 @@ sub CLItrans {
 }
 
 sub CLIfuturetrans {
-	if ( 0 == $arglist[$where+1] ) { $arglist[$where+1] .= ".0"; }
+	if ( $arglist[$where+1] && $arglist[$where+1] == 0) { $arglist[$where+1] .= ".0"; }
 
 	if ( $arglist[$where+3] && $arglist[$where+2] && $arglist[$where+1] )
 	{
